--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             margin: 0;
         }
         </style>
-        <title>KOLKATA STREAM POWER INDEX</title>
+        <title>KOLKATA DISECTION INDEX</title>
     </head>
     <body>
         <div id="map">
@@ -48,11 +48,11 @@
 
             if (e.target.feature.geometry.type === 'LineString' || e.target.feature.geometry.type === 'MultiLineString') {
               highlightLayer.setStyle({
-                color: '#ffff00',
+                color: 'rgba(255, 255, 0, 1.00)',
               });
             } else {
               highlightLayer.setStyle({
-                fillColor: '#ffff00',
+                fillColor: 'rgba(255, 255, 0, 1.00)',
                 fillOpacity: 1
               });
             }
@@ -60,7 +60,7 @@
         }
         var map = L.map('map', {
             zoomControl:false, maxZoom:28, minZoom:1
-        }).fitBounds([[22.365811553291724,87.97681525981574],[22.771460808797855,88.65880248331909]]);
+        })
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -132,30 +132,9 @@
             return this._div;
         };
         title.update = function () {
-            this._div.innerHTML = '<h2>KOLKATA STREAM POWER INDEX</h2>';
+            this._div.innerHTML = '<h2>KOLKATA DISECTION INDEX</h2>';
         };
         title.addTo(map);
-        var abstract = new L.Control({'position':'bottomleft'});
-        abstract.onAdd = function (map) {
-            this._div = L.DomUtil.create('div',
-            'leaflet-control abstract');
-            this._div.id = 'abstract'
-                this._div.setAttribute("onmouseenter", "abstract.show()");
-                this._div.setAttribute("onmouseleave", "abstract.hide()");
-                this.hide();
-                return this._div;
-            };
-            abstract.hide = function () {
-                this._div.classList.remove("abstractUncollapsed");
-                this._div.classList.add("abstract");
-                this._div.innerHTML = 'i'
-            }
-            abstract.show = function () {
-                this._div.classList.remove("abstract");
-                this._div.classList.add("abstractUncollapsed");
-                this._div.innerHTML = 'The Stream Power Index (SPI) in Kolkata is generally very low due to the city’s flat deltaic topography, low slope gradients, and slow-moving drainage channels. The Hooghly River and its distributaries exhibit reduced erosive energy, as the terrain offers minimal elevation change. Most streams display weak hydraulic force, dominated by tidal influence, sediment deposition, and urban drainage modifications. As a result, Kolkata represents a low-energy fluvial environment with limited stream power and minimal erosional capacity. ';
-        };
-        abstract.addTo(map);
         var zoomControl = L.control.zoom({
             position: 'topleft'
         }).addTo(map);
@@ -172,6 +151,9 @@
         document.getElementsByClassName('leaflet-control-measure-toggle')[0].className += ' fas fa-ruler';
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
+            if (bounds_group.getLayers().length) {
+                map.fitBounds(bounds_group.getBounds());
+            }
         }
         map.createPane('pane_OSMStandard_0');
         map.getPane('pane_OSMStandard_0').style.zIndex = 400;
@@ -224,7 +206,7 @@
                 weight: 4.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(183,72,75,0.0)',
+                fillColor: 'rgba(152,125,183,0.0)',
                 interactive: true,
             }
         }
@@ -262,8 +244,8 @@
             });
             var popupContent = '<table>\
                     <tr>\
-                        <th scope="row">SPI</th>\
-                        <td>' + (feature.properties['SPI'] !== null ? autolinker.link(String(feature.properties['SPI']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
+                        <th scope="row">DS_INDEX</th>\
+                        <td>' + (feature.properties['DS_INDEX'] !== null ? autolinker.link(String(feature.properties['DS_INDEX']).replace(/'/g, '\'').toLocaleString()) : '') + '</td>\
                     </tr>\
                 </table>';
             var content = removeEmptyRowsFromPopupContent(popupContent, feature);
@@ -284,7 +266,7 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(152,125,183,0.0)',
+                fillColor: 'rgba(145,82,45,0.0)',
                 interactive: true,
             }
         }
@@ -302,17 +284,17 @@
         });
         bounds_group.addLayer(layer_Kolkata_GRID_2);
         map.addLayer(layer_Kolkata_GRID_2);
-        map.createPane('pane_STREAMPOWERINDEX_3');
-        map.getPane('pane_STREAMPOWERINDEX_3').style.zIndex = 403;
-        var img_STREAMPOWERINDEX_3 = 'data/STREAMPOWERINDEX_3.png';
-        var img_bounds_STREAMPOWERINDEX_3 = [[22.450183404932016,88.23300443512008],[22.633594780824854,88.45935836152557]];
-        var layer_STREAMPOWERINDEX_3 = new L.imageOverlay(img_STREAMPOWERINDEX_3,
-                                              img_bounds_STREAMPOWERINDEX_3,
-                                              {pane: 'pane_STREAMPOWERINDEX_3'});
-        bounds_group.addLayer(layer_STREAMPOWERINDEX_3);
-        map.addLayer(layer_STREAMPOWERINDEX_3);
+        map.createPane('pane_Disection_Index_3');
+        map.getPane('pane_Disection_Index_3').style.zIndex = 403;
+        var img_Disection_Index_3 = 'data/Disection_Index_3.png';
+        var img_bounds_Disection_Index_3 = [[22.450183404932016,88.23300443512008],[22.633594780824854,88.45935836152557]];
+        var layer_Disection_Index_3 = new L.imageOverlay(img_Disection_Index_3,
+                                              img_bounds_Disection_Index_3,
+                                              {pane: 'pane_Disection_Index_3'});
+        bounds_group.addLayer(layer_Disection_Index_3);
+        map.addLayer(layer_Disection_Index_3);
         var overlaysTree = [
-            {label: "STREAM POWER INDEX", layer: layer_STREAMPOWERINDEX_3},
+            {label: "Disection_Index", layer: layer_Disection_Index_3},
             {label: '<img src="legend/Kolkata_GRID_2.png" /> Kolkata_GRID', layer: layer_Kolkata_GRID_2},
             {label: '<img src="legend/Kolkata_1.png" /> Kolkata', layer: layer_Kolkata_1},
             {label: "OSM Standard", layer: layer_OSMStandard_0},]
